# LLM_chartcreator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
docs/: Doxyfile
scripts/: build.bat  build.sh  run_tests.sh
src/: main.cpp
src/api/: OllamaClient.cpp  OllamaClient.h
src/core/: CodeExecutor.cpp  CodeExecutor.h  PromptBuilder.cpp  PromptBuilder.h
src/gui/: MainWindow.cpp  MainWindow.h  OutputWidget.cpp  OutputWidget.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h
tests/: test_CodeExecutor.cpp  test_FileUtils.cpp  test_OllamaClient.cpp  test_PromptBuilder.cpp  test_main.cpp
